--- a/tools/github-actions/setup-deps/action.yaml
+++ b/tools/github-actions/setup-deps/action.yaml
@@ -4,8 +4,7 @@ description: Install host system dependencies
 runs:
   using: composite
   steps:
-    - uses: pnpm/action-setup@v4.0.0
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+        cache: 'npm'
