--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,10 +46,10 @@ jobs:
       - uses: ./tools/github-actions/setup-deps
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm run install
 
       - name: Build
-        run: pnpm build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -74,10 +74,10 @@ jobs:
         run: make install-tools
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm run install
 
-      - name: Run Pnpm Lint
-        run: make pnpm-lint
+      - name: Run npm Lint
+        run: make npm-lint
         
       - name: Run Markdown Lint
         run: make markdown
