--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.BLOG_DEPLOY_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./dist
 
   lint-check:
 
