feat: add sitemap and roots.txt config
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npm run sitemap && tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sitemap": "tsx scripts/generate-sitemap.ts"
   },
   "dependencies": {
     "@docsearch/react": "^4.4.0",
@@ -51,6 +52,7 @@
     "gray-matter": "^4.0.3",
     "prettier": "^3.7.4",
     "tailwindcss": "^3.4.19",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
