--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,22 +20,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
-
-      - name: Get the content of docsearch.json as config
-        id: algolia_config
-        run: echo "::set-output name=config::$(cat docsearch.json | jq -r tostring)"
-
-      - name: Run algolia/docsearch-scraper image
-        env:
-          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
-          ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-          CONFIG: ${{ steps.algolia_config.outputs.config }}
+      - name: Run algolia search indexer
         run: |
-          docker run \
-            --env APPLICATION_ID=${ALGOLIA_APP_ID} \
-            --env API_KEY=${ALGOLIA_API_KEY} \
-            --env "CONFIG=${CONFIG}" \
-            algolia/docsearch-scraper
+          make algolia-search ALGOLIA_APP_ID=${{ secrets.ALGOLIA_APP_ID }} ALGOLIA_API_KEY=${{ secrets.ALGOLIA_API_KEY }}
 
   build-and-deploy:
     runs-on: ubuntu-latest
